tests/negative/other/generic_function_explicit_type_argument_mismatch.tx
// EXPECTED: COMPILE_ERROR
// Description: Explicit generic type arguments must agree with call arguments.

function identity<T>(value: T): T {
    return value;
}

function main() {
    let text = identity<string>(123);
}
